# GraphicProgrammingAssignment

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  GraphicProgrammingAssignment.sln  GraphicProgrammingAssignment.vcxproj  GraphicProgrammingAssignment.vcxproj.filters  GraphicsProgrammingAssignment.sln  PROJECT_SUMMARY.md  README.md
GraphicsProgrammingAssignment/: BackBone.cpp  BackBone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  FrustumCube.cpp  FrustumCube.h  GraphicsProgrammingAssignment.vcxproj  GraphicsProgrammingAssignment.vcxproj.filters  InputManager.cpp  InputManager.h  Light.cpp  Light.h  Math.cpp  Math.h  Object.cpp  Object.h  Pyramid.cpp  Pyramid.h  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h  Timer.cpp  Timer.h  TowerBridge.cpp  TowerBridge.h  armJointArmor.json  background.json  bigWing.json  body.json  bodyBone.json  bridge.json  data.json  forearmOuter.json  gun.json  gunBodyPattern1.json  gunBodyPattern2.json  gunBodyPattern3.json  (+30 more)
GraphicsProgrammingAssignment/Assets/: skin4.af~lock~
GraphicsProgrammingAssignment/Assets/Color Skin Series/modern-technology-banners-collection-cyberpunk-style-abstract-scifi-text-boxes-with-glitch-effect-fu (1)/: jan2023_20.eps
GraphicsProgrammingAssignment/Debug/: GraphicsProgrammingAssignment.exe.recipe  vc143.idb
GraphicsProgrammingAssignment/Debug/Graphics.48307893.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GraphicsProgrammingAssignment.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/: BUILD_INSTRUCTIONS.md  DIRECTX_INTEGRATION.md  QUICKSTART.md  SETUP_DEPENDENCIES.md
enc_temp_folder/92cf6165681a1464c8c4dff874c388/: head.json
enc_temp_folder/cdc9a0ad302ccee3396caedfec72ae8d/: sword.json
include/: GraphicsCommon.h  Shader.h
src/: main.cpp
(+1 files in other folders)
